tests/ui/const-generics/const-param-before-other-params.stderr
error: lifetime parameters must be declared prior to type and const parameters
  --> $DIR/const-param-before-other-params.rs:1:21
   |
LL | fn bar<const X: u8, 'a>(_: &'a ()) {
   |                     ^^
   |
help: reorder the parameters: lifetimes, then consts and types
   |
LL | fn bar<'a, const X: u8>(_: &'a ()) {
   |       ~~~~~~~~~~~~~~~~~

error: aborting due to 1 previous error

